--- a/portal/src/main/resources/application.properties
+++ b/portal/src/main/resources/application.properties
@@ -49,3 +49,9 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.ErrorMvc
 
 #for Spring Boot 2.0
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
+
+# Executor property
+executor.corepoolsize=4
+executor.maxpoolsize=4
+executor.queuecapacity=500
+executor.threadnameprefix=QueueExecutor-
