--- a/portal/src/test/resources/application.properties
+++ b/portal/src/test/resources/application.properties
@@ -43,3 +43,9 @@ spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 server.servlet.contextPath=/sbps
+
+# Executor property
+executor.corepoolsize=4
+executor.maxpoolsize=4
+executor.queuecapacity=500
+executor.threadnameprefix=QueueExecutor-
